 - Fixed servlist crash on 'use global' off and empty nick field.
 - Added missing address field to Perl's IRC::dcc_list.
 - Added irc_conf_mode setting (via /set only).
 - Save xchat.conf safely (Michael Witrant).
 - Added support for numeric 005 token NAMESX.
 - Added TCL Plugin (Daniel P. Stasinski).
 - Added 'Add' button to serverlist, due to popular demand.
 - Add new tabs alphabetically.


----------------------------------------------------------------------
 1.9.8
----------------------------------------------------------------------

 - Added Amharic translation (Daniel Yacob).
 - Updated Spanish translation (Pablo del Campo).
 - Updated Lithuanian translation (Rimas Kudelis).
 - Updated Latvian translation (Artis Trops).
 - Fixed serverlist entry box text corruption (xc197-fixservlist.diff)
 - Fixed the non-mmx tinted-tranparency code crashing.
 - Fixed interpretation of mIRC color 99 [653094].
 - Use Pango renderer by default, for better i18n.
 - Scroll 1/10 of a page with the mouse wheel (Soeren Sandmann).
 - Reimplemented -a, --no-auto argument.
 - Fixed a bug in entering text with GTK2 IMs [653751].
 - Final fix for filenames' encoding in DCC.
 - New unicode character chart window.
 - xtext: properly recalculate text widths after a font change.
 - Fixed perl IRC::dcc_list 1.8.x incompatibility (Charles Lopes).
 - xtext: Implemented scrolling instead of full redraws when not using
   a background image or transparency. This improves scrolling on
   machines that draw AA text very slowly.
 - Reimplemented 'Move front tab left/right' keybinding.
 - Provide default usermenu and buttons for translation.
 - New default icon (Dagmar d'Surreal).
 - Report the average KBs when a transfer is finished.
 - Attempt to create dcc-download dir when changed in the setup gui.
 - Apply character set conversions to DCC Chat aswell (Steve Green).
 - xtext: Fixed hilight-text in scrollback after new addition bug.
 - Channellist gui cleanup.