@@ -34,6 +34,8 @@
  - Added TCL Plugin (Daniel P. Stasinski).
  - Added 'Add' button to serverlist, due to popular demand.
  - Add new tabs alphabetically.
+ - Win32 fixes/makefile for python plugin (James Potts).
+ - 
 
 
 ----------------------------------------------------------------------
